--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,52 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+/* @media (max-width: 991px) {
+    
+  .container-fluid{
+      padding: 7% 10%;
+  }
+  #title{
+      text-align: center;
+  }
+  #title .container-fluid{
+      padding: 7%;
+  }
+  .title-image{
+      position: static;
+      transform: rotate(0);
+  }
+  .big-heading{
+      font-weight: 900;
+      font-size: 2.5rem;
+      line-height: 1.5;
+  }
+  .section-heading{
+      font-size: 2.25rem;
+      line-height: 1.5;
+  }    
+  .testimonial-text{
+      font-size: 2.25rem;
+      line-height: 1.5;
+  }
+  .testimonial-image{
+      width: 20%;
+      border-radius: 100%;
+      margin: 20px;
+  }
+  .press-logo{
+      width: 25%;
+      margin: 20px 20px;
+  }
+  .pricing-text{
+      font-size: 1.75rem;
+      line-height: 1.5;
+  }
+  .pricing-column {
+      padding: 3% 7%;
+  }
+  #footer .container-fluid{
+      padding: 7% 15%;
+  }
+} */
