--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 .game-over {
   background-color: red;
   opacity: 0.8;
+  transition: opacity 0.2s step-end;
 }
 
 .game-over-title{
@@ -59,6 +60,7 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+  animation: fade-in-out 0.2s linear forwards;
 }
 
 @keyframes fade-in-out {
