--- a/styles.css
+++ b/styles.css
@@ -72,51 +72,22 @@ body {
   100% { opacity: 1; }
 }
 
-/* @media (max-width: 991px) {
-    
-  .container-fluid{
-      padding: 7% 10%;
+@media (max-width: 991px) {
+  #level-title {
+    font-size: 1.5rem;
   }
-  #title{
-      text-align: center;
+  .container {
+    display: block;
+    width: 80%;
+    margin: auto;  
   }
-  #title .container-fluid{
-      padding: 7%;
+  
+  .btn {
+    margin: 2.5vw;
+    display: inline-block;
+    height: 20vw;
+    width: 20vw;
+    border: 1.5vw solid black;
+    border-radius: 20%;
   }
-  .title-image{
-      position: static;
-      transform: rotate(0);
-  }
-  .big-heading{
-      font-weight: 900;
-      font-size: 2.5rem;
-      line-height: 1.5;
-  }
-  .section-heading{
-      font-size: 2.25rem;
-      line-height: 1.5;
-  }    
-  .testimonial-text{
-      font-size: 2.25rem;
-      line-height: 1.5;
-  }
-  .testimonial-image{
-      width: 20%;
-      border-radius: 100%;
-      margin: 20px;
-  }
-  .press-logo{
-      width: 25%;
-      margin: 20px 20px;
-  }
-  .pricing-text{
-      font-size: 1.75rem;
-      line-height: 1.5;
-  }
-  .pricing-column {
-      padding: 3% 7%;
-  }
-  #footer .container-fluid{
-      padding: 7% 15%;
-  }
-} */
+}
