--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,18 @@ body {
   transition: all 0.2s jump-end;
 }
 
+footer {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.5rem;
+  color: #FEF2BF;
+  text-align: center;
+  position: fixed; /* or absolute */
+  top: 90%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+
 @keyframes fade-in-out {
   0%,100% { opacity: 0; }
   50% { opacity: 1; }
@@ -79,7 +91,12 @@ body {
   .container {
     display: block;
     width: 80%;
-    margin: auto;  
+    margin: auto;
+    position: fixed; /* or absolute */
+    top: 45%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
   }
   
   .btn {
